--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,12 +12,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Train and deploy model
-        run: |
-          python main.py
+      - name: Train model
+        run: python -m src.train_model
+      - name: Register model
+        run: python -m src.register_model
