--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -8,15 +8,31 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Start MLflow tracking server
+        run: |
+          nohup mlflow server \
+            --backend-store-uri sqlite:///mlflow.db \
+            --default-artifact-root ./mlruns \
+            --host 127.0.0.1 \
+            --port 8080 &
+          sleep 10
+
+      - name: Set MLflow tracking URI
+        run: echo "MLFLOW_TRACKING_URI=http://127.0.0.1:8080" >> $GITHUB_ENV
+
       - name: Train model
         run: python -m src.train_model
+
       - name: Register model
         run: python -m src.register_model
